updated slides content

--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 					<img data-src="assets/monolith.gif">
 				</section>
 
-				<section data-markdown> 
-					<textarea data-template>
-						## Killer Features ?
-					
-						* _Ahead-of-Time_ compilation
-						* Moindre réflexion
-					</textarea>
+				<section>
+					<h3 class="title">Killer Features ?</h3>
+					<section data-markdown> 
+						<textarea data-template>							
+							* _Ahead-of-Time_ compilation
+							* Réflexion minimale
+						</textarea>
+					</section>
 				</section>
 
 				<section> 
@@ -71,23 +72,72 @@
 							* Vault support
 						</textarea>
 					</section>
-					
+					<section data-markdown>
+						<textarea data-template>
+							* Modulaire
+							* Déclaratif
+							* Non-bloquant
+							* Résilient
+						</textarea>
+					</section>
 				</section>
 
 				<section class="chapter">
 					Micronaut CLI
 				</section>
 
+				<section>
+					<h3 class="title">Micronaut CLI</h3>
+					<section data-markdown>
+						<textarea data-template>
+							* Initialisation d'appli
+							* Choix de langage
+							* Choix d'outil de build
+							* Profils d'application
+						</textarea>
+					</section>
+					<section></section>
+					<section><web-term path=""/></section>
+				</section>
+
 				<section class="chapter">
 					Kafka
+				</section>
+
+				<section>
+					<h3 class="title">Kafka</h3>
+					<section data-markdown>
+						<textarea data-template>
+							* Déclaratif vs Programmatique
+						</textarea>
+					</section>
+					<section><pre><code data-sample='code/java/DeclarativeKafkaProducer.java'></code></pre></section>
+					<section></section>
+					<section></section>
 				</section>
 
 				<section class="chapter">
 					Scheduling
 				</section>
 
+				<section>
+					<h3 class="title">Scheduling</h3>
+					<section></section>
+					<section></section>
+					<section></section>
+					<section></section>
+				</section>
+
 				<section class="chapter">
 					Monitoring
+				</section>
+
+				<section>
+					<h3 class="title">Monitoring</h3>
+					<section></section>
+					<section></section>
+					<section></section>
+					<section></section>
 				</section>
 
 				<section class="chapter">
@@ -96,7 +146,7 @@
 
 				<section>
 					Take some Java sample
-					<pre><code data-sample='code/java/HelloWorld.java'></code></pre>
+					<pre><code data-sample='code/java/DeclarativeKafkaProducer.java'></code></pre>
 				</section>
 
 				<section>
