add informations about config and kafka, and context

--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
 					Pourquoi ce choix ?
 				</section>
 
-				<section data-background-image="assets/monolith.gif"></section>
-
-				</section>
-				<section>
-					<img data-src="assets/monolith.gif">
+				<section data-background-image="assets/monolith.gif">
+					<p style="color:white;position:absolute;text-shadow:#ffffff42 0px 0px 7px;">LE MONOLITHE</p>
+					<ul style="color:white;list-style-type:none;position:absolute;left:80%;text-shadow:#ffffff42 0px 0px 7px;">
+						<li class="fragment fade-up">stock</li>
+						<li class="fragment fade-up">supply</li>
+						<li class="fragment fade-up">prix</li>
+						<li class="fragment fade-up">performance éco.</li>
+						<li class="fragment fade-up">etc</li>
+					</ul>
 				</section>
 
 				<section> 
@@ -131,6 +135,7 @@
 					</section>
 
 					<section>
+						Injection de properties
 						<pre><code data-sample='code/java/PropertiesInclusion.java'></code></pre>
 					</section>
 				</section>
@@ -220,7 +225,11 @@
 
 				<section>
 					<h3 class="title">Scheduling</h3>
-					<section></section>
+					<section>
+						<p>Annotations pour créer des tâches périodiques</p>
+						<p class="fragment fade-up">Pas de job cron nécessaire</p>
+
+					</section>
 					<section></section>
 				</section>
 
